// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginSpecs should render properly 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between space-4"
  >
    <div
      class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Author
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            <div
              class="flex items-center"
            >
              <span
                class="font-semibold text-theme-secondary-text"
              >
                ARK Ecosystem
              </span>
            </div>
          </span>
        </div>
      </div>
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Category
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            Utility
          </span>
        </div>
      </div>
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            URL
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            <a
              class="link"
              data-testid="PluginSpecs__url"
              href="/"
            >
              github.com
            </a>
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col text-right"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Version
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            1.3.8
          </span>
        </div>
      </div>
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col text-right"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Size
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            4.2 Mb
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginSpecs should render without url and size 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between space-4"
  >
    <div
      class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Author
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            <div
              class="flex items-center"
            >
              <span
                class="font-semibold text-theme-secondary-text"
              >
                ARK Ecosystem
              </span>
              <div
                class="ml-2"
                data-testid="PluginSpecss__official"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Category
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            Utility
          </span>
        </div>
      </div>
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            URL
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            N/A
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex space-x-8 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
    >
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col text-right"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Version
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            1.3.8
          </span>
        </div>
      </div>
      <div
        class="flex pl-8"
      >
        <div
          class="flex flex-col text-right"
        >
          <span
            class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            Size
          </span>
          <span
            class="font-semibold text-theme-secondary-text"
          >
            N/A
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
